--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+apply plugin: 'groovy'
+apply plugin: 'idea'
+apply plugin: 'io.ratpack.ratpack-groovy'
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile 'org.codehaus.groovy:groovy:2.4.0'
+    compile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    runtime 'org.slf4j:slf4j-simple:1.7.5'
+}
+
 buildscript {
     repositories {
         jcenter()
@@ -5,15 +19,4 @@ buildscript {
     dependencies {
         classpath 'io.ratpack:ratpack-gradle:0.9.13'
     }
-}
-
-apply plugin: 'io.ratpack.ratpack-groovy'
-apply plugin: 'idea'
-
-repositories {
-    jcenter()
-}
-
-dependencies {
-    runtime 'org.slf4j:slf4j-simple:1.7.5'
 }
