--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,13 @@ repositories {
 }
 
 dependencies {
+  compile 'com.google.inject.extensions:guice-persist:4.0-beta5'
+  compile 'org.apache.commons:commons-dbcp2:2.0.1'
   compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
+  compile 'org.hibernate:hibernate-entitymanager:4.3.8.Final'
+  compile 'org.hsqldb:hsqldb:2.3.2'
+  compile 'org.slf4j:slf4j-log4j12:1.7.10'
   compile 'org.spockframework:spock-core:0.7-groovy-2.0'
-  runtime 'org.slf4j:slf4j-simple:1.7.5'
 }
 
 buildscript {
