--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
   compile 'org.hsqldb:hsqldb:2.3.2'
   compile 'org.slf4j:slf4j-log4j12:1.7.10'
   compile 'org.spockframework:spock-core:0.7-groovy-2.0'
+  compile 'org.spockframework:spock-guice:0.7-groovy-2.0'
 }
 
 buildscript {
